# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: PythonCI.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_name.py  0003_alter_status_options.py  0004_alter_status_options.py
task_manager/tasks/: filters.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_labelprotection_task_labels.py
task_manager/templates/: base.html  confirm_delete.html  form.html  index.html  login.html
task_manager/templates/labels/: index.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: index.html  task_view.html
task_manager/templates/users/: create.html  index.html  update.html  user_confirm_delete.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
